[project]
name = "rag-with-langchain"
authors = [{ name = "Rajendra Kumar Yadav", email = "rajendra.ecti@gmail.com" }]
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = ["docling>=2.45.0",
    "fastapi>=0.116.1",
    "flask>=3.1.1",
    "langchain>=0.3.27",
    "langchain-docling>=1.0.0",
    "langchain-groq>=0.3.7",
    "langchain-ollama>=0.3.6",
    "langchain-qdrant>=0.2.0",
    "langchain-text-splitters>=0.3.9",
    "langgraph>=0.6.5",
    "pydantic>=2.11.7",
    "python-dotenv>=1.1.1",
    "qdrant-client>=1.15.1",
    "streamlit>=1.48.1",
    "uvicorn>=0.35.0",
]
